yaml/hello-ocp/hello-ocp.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-ocp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: hello-ocp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-ocp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-ocp
  template:
    metadata:
      labels:
        app: hello-ocp
    spec:
      containers:
      - name: hello-ocp
        image: jhidalgo3/hello-kubernetes:3.0
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
