yaml/hello-ocp/hello-ocp-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    app: hello-ocp
  name: hello-ocp
  namespace: default
spec:
  rules:
  - host: hello-ocp.k8s.jhidalgo3.me
    http:
      paths:
      - backend:
          serviceName: hello-ocp
          servicePort: 80
